--- a/_posts/2020-04-12-vue篇一.md
+++ b/_posts/2020-04-12-vue篇一.md
@@ -129,8 +129,8 @@ webpack和CLI
 
 * 函数定义
 
-* ```
-  methods:{
+* ```js
+  			methods:{
                   add:function(){
   
                   },
@@ -150,7 +150,7 @@ webpack和CLI
 
 * this.counter
 
-```
+```vue
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -200,7 +200,7 @@ webpack和CLI
 * View-------ViewModel------Model
 * 视图层-----视图模型层-----数据层
 
-```
+```vue
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -268,9 +268,9 @@ webpack和CLI
 
 ## 创建Vue实例传入的options
 
-* el                                  string|HTMLElement                        实例DOM
+* el                                  string | HTMLElement                          实例DOM
 * data                             Object | Function  (组件必须是函数)      数据对象
-* methods                    ([key:string] Function)                       方法
+* methods                    ([key:string] Function)                              方法
 
 ## 生命周期(钩子函数)
 
@@ -286,7 +286,7 @@ new Vue()   对象内部的一系列操作
 
 * Mustache语法  {{}}
 
-```
+```vue
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -326,7 +326,7 @@ new Vue()   对象内部的一系列操作
 * v-once指令  只显示第一次的状态    取消响应式
 * `<h2 v-once>{{messages}}</h2>`
 
-```
+```vue
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -349,9 +349,6 @@ new Vue()   对象内部的一系列操作
             el:"#app",
             data:{
                 messages:"你好"
-
-
-
             },
         })
 
@@ -363,7 +360,7 @@ new Vue()   对象内部的一系列操作
 * v-html  解析html数据
 * `<h2 v-html="url"></h2>`
 
-```
+```vue
  <div id="app">
         <h2>{{messages}}</h2>
         <h2 v-html="url"></h2>
@@ -379,14 +376,13 @@ new Vue()   对象内部的一系列操作
                 url:'<a href="http://wwww.baidu.com">百度一下</a>'
             },
         })
-
     </script>
 ```
 
 * v-text   不推荐使用
 * `  <h2 v-text="messages"></h2>`
 
-```
+```vue
  <div id="app">
         <h2>{{messages}},sasfa</h2>
         <!-- 你好,sasfa-->
@@ -413,7 +409,7 @@ new Vue()   对象内部的一系列操作
 * v-pre的使用    原封不动
 * ` <h2 v-pre>{{messages}}</h2>`
 
-```
+```vue
 <div id="app">
         <h2>{{messages}}</h2>
         <h2 v-pre>{{messages}}</h2>
@@ -436,7 +432,7 @@ new Vue()   对象内部的一系列操作
 
 * v-cloak指令  vue解析完成会删除该属性      
 
-```
+```vue
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -475,7 +471,7 @@ new Vue()   对象内部的一系列操作
 
 * v-bind操作   动态写属性   缩写:  语法糖
 
-```
+```vue
 <div id="app">
         <h2>{{messages}}</h2>
         <!-- <img src="https://img13.360buyimg.com/n1/jfs/t1/82232/33/6593/192712/5d4b9de7Ee0fcb246/f5af33071e9815ee.jpg" alt=""> -->
@@ -504,7 +500,7 @@ new Vue()   对象内部的一系列操作
 
 * v-bind 绑定class属性   对象语法
 
-```
+```vue
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -561,7 +557,7 @@ new Vue()   对象内部的一系列操作
 
 * v-bind   动态绑定class  数组语法
 
-```
+```vue
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -608,7 +604,7 @@ new Vue()   对象内部的一系列操作
 
 * v-for和v-bind的结合
 
-```
+```vue
  <div id="app">
         <ul>
             <li v-for="(item,index) in movies" 
@@ -629,7 +625,6 @@ new Vue()   对象内部的一系列操作
             },
             methods:{
                 btnclick(index){
-                    console.log(index)
                     this.currentIndex=index;
                 }
             }
@@ -647,7 +642,7 @@ new Vue()   对象内部的一系列操作
 * `h2 :style="{fontSize:finalSize2 + px}">{{messages}}</h2>`
 * 注意不加单引号作为变量使用
 
-```
+```vue
 <body>
 
     <div id="app">
@@ -656,7 +651,6 @@ new Vue()   对象内部的一系列操作
         <!-- <h2 :style="{fontSize:finalSize}">{{messages}}</h2> -->
         <h2 :style="{fontSize:finalSize2 + 'px',color:finalColor,backgroundColor:finalBgColor}">{{messages}}</h2>
     </div>
-
     <script src="../js/vue.js"></script>
 
     <script>
@@ -670,7 +664,6 @@ new Vue()   对象内部的一系列操作
                 finalBgColor:'red',
             },
         })
-
     </script>
 </body>
 ```
@@ -679,7 +672,7 @@ new Vue()   对象内部的一系列操作
 
 * `<h2 :style="[baseStyle,baseStyle1]">{{messages}}</h2>`
 
-```
+```vue
  <div id="app">
         <h2 :style="[baseStyle,baseStyle1]">{{messages}}</h2>
     </div>
@@ -701,18 +694,16 @@ new Vue()   对象内部的一系列操作
 
 ## 计算属性
 
-```
-			computed:{
+```js
+		   computed:{
                 fullName:function(){
                     return this.firstName + ' ' + this.lastName;
                 }
             },
-            
-            
 ```
 
-```
-<div id="app">
+```vue
+	<div id="app">
         <h2>{{firstName + ' ' + lastName}}</h2>
         <h2>{{firstName}} {{lastName}}</h2>
         <h2>{{getFullName()}}</h2>
@@ -746,7 +737,7 @@ new Vue()   对象内部的一系列操作
 
 ### 复杂操作
 
-```
+```vue
  <div id="app">
         <h2>总价格:{{totalPrice}} </h2>
     </div>
@@ -776,13 +767,12 @@ new Vue()   对象内部的一系列操作
             },
         })
         
-
     </script>
 ```
 
 ## setter 和 getter 计算属性的本质
 
-```
+```vue
 <div id="app">
         <h2>{{fullName}}</h2>
     </div>
@@ -822,7 +812,7 @@ new Vue()   对象内部的一系列操作
 
 * 调用次数上
 
-```
+```vue
  <div id="app">
         <!-- 直接拼接 pass-->
         <!-- <h2>{{firstName}} {{lastName}}</h2> -->
@@ -880,7 +870,7 @@ new Vue()   对象内部的一系列操作
 
 *  v-on:click及@click
 
-```
+```vue
 <div id="app">
         <h2>{{counter}}</h2>
         <!-- <button v-on:click="counter++">+</button>
@@ -915,7 +905,7 @@ new Vue()   对象内部的一系列操作
 * 默认形参
 * 浏览器event对象获取
 
-```
+```vue
 <div id="app">
         <!-- 无参数写法 -->
         <button @click="btnClick1()">按钮1</button>
@@ -971,7 +961,7 @@ new Vue()   对象内部的一系列操作
 * .enter
 * .once
 
-```
+```vue
  <div id="app">
         <div @click="divClick">
             <!-- .stop 阻止事件冒泡  调用event.stopPropagation()-->
@@ -1016,7 +1006,6 @@ new Vue()   对象内部的一系列操作
                 btn2click(){
                     console.log("btn2click");
                 },
-                
             }
         })
 
@@ -1027,14 +1016,13 @@ new Vue()   对象内部的一系列操作
 
 * v-if,v-else-if,v-else
 
-```
+```vue
 <div id="app">
         <!-- 简单逻辑使用 -->
         <h2 v-if="isShow">{{messages}}</h2>
         <h2 v-else=>
             isShow为false
         </h2>
-
 
         <!-- 不常用   一版用计算属性进行 -->
         <h2 v-if="score>=90">优秀</h2>
@@ -1055,13 +1043,12 @@ new Vue()   对象内部的一系列操作
                 score:99,
             },
         })
-
     </script>
 ```
 
 ## 条件渲染案例
 
-```
+```vue
 <div id="app">
         <span v-if="isUser">
             <label for="username">用户账号</label>
@@ -1083,7 +1070,6 @@ new Vue()   对象内部的一系列操作
                 isUser:true
             },
         })
-
     </script>
 ```
 
@@ -1092,7 +1078,7 @@ new Vue()   对象内部的一系列操作
 * 原因: 生成虚拟DOM 与 真实DOM对比时 不一样的进行渲染 并不是重新生成新的input(复用之前的)
 * 解决: key标识
 
-```
+```vue
 <!-- input的内容保留问题 -->
     <!-- 原因: 生成虚拟DOM 与 真实DOM对比时 不一样的进行渲染 并不是重新生成新的input(复用之前的)-->
     <!-- 解决: key标识 -->
@@ -1117,20 +1103,19 @@ new Vue()   对象内部的一系列操作
                 isUser:true
             },
         })
-
     </script>
 ```
 
 * v-show
 
-```
+```vue
 <div id="app">
         <!-- 直接删除DOM -->
         <!-- 一般只切换几次的操作 -->
         <h2 v-if="isShow" id="aaa">{{messages}}</h2>
        
         <!-- 只是给DOM增加了display样式 -->
-        <!-- 切换平律高使用 -->
+        <!-- 切换频率高使用 -->
         <h2 v-show="isShow" id="bbb">{{messages}}</h2>
     </div>
 
@@ -1152,7 +1137,7 @@ new Vue()   对象内部的一系列操作
 
 * v-for
 
-```
+```vue
 <div id="app">
         <!-- 遍历数组 -->
         <ul>
@@ -1203,7 +1188,7 @@ new Vue()   对象内部的一系列操作
 * `遍历的时候加上一个key`       为了更好的复用
 * v-for 使用key    不要使用index作为key
 
-```
+```vue
 <div id="app">
        <ul>
            <!-- 在某个位置插入元素 letters.splice(2,0,'F') -->
@@ -1234,7 +1219,7 @@ new Vue()   对象内部的一系列操作
 * 非响应式
   * this.letters[0]="bbbb";
 
-```
+```vue
 
     <div id="app">
         <ul>
@@ -1272,7 +1257,7 @@ new Vue()   对象内部的一系列操作
                     //多个
                     // this.letters.unshift("aaa","bbb","ccc");
 
-                //5.splice()   删除或插入
+                //5.splice()   删除或插入或替换
                     // 删除    从第2个位置开始 删除1个  索引0开始
                     // this.letters.splice(2,1)
                     //不传入  从第2个位置开始 删除后面所有
@@ -1310,7 +1295,27 @@ new Vue()   对象内部的一系列操作
 
 ## 书籍购物车案例
 
+```css
+table{
+    border: 1px solid #e9e9e9;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+th,td{
+    padding: 0px 16px;
+    border: 1px solid #e9e9e9;
+    text-align: left;
+}
+
+th{
+    background-color: #f7f7f7;
+    color: #5c6b77;
+    font-weight: 600;
+}
 ```
+
+```vue
  <div id="app">
         <div v-if="books.length">
             <table>
@@ -1350,29 +1355,10 @@ new Vue()   对象内部的一系列操作
         </div>
         <h2 v-else>购物车为空</h2>
     </div>
-    
-    <script src="../js/vue.js"></script>
+
+   <script src="../js/vue.js"></script>
     <script src="./main.js"></script>
-    
-    
-    
-table{
-    border: 1px solid #e9e9e9;
-    border-collapse: collapse;
-    border-spacing: 0;
-}
 
-th,td{
-    padding: 0px 16px;
-    border: 1px solid #e9e9e9;
-    text-align: left;
-}
-
-th{
-    background-color: #f7f7f7;
-    color: #5c6b77;
-    font-weight: 600;
-}
 
 const app = new Vue({
     el:"#app",
@@ -1459,7 +1445,7 @@ const app = new Vue({
 * map
 * reduce
 
-```
+```vue
 <script>
         // filter/mpa/reduce
 
@@ -1497,8 +1483,6 @@ const app = new Vue({
         let totalAll2 = nums.filter(n => n < 100).map(n=>n*2).reduce((preValue,n)=>preValue+n);
         
         console.log(totalAll2);
-        
-
     </script>
 ```
 
@@ -1506,7 +1490,7 @@ const app = new Vue({
 
 * 实现及原理
 
-```
+```vue
  <!-- 双向绑定 -->
     <!-- 数据联动 -->
 
@@ -1546,7 +1530,7 @@ const app = new Vue({
 
 * v-model与radio结合
 
-```
+```vue
  <div id="app">
         <!-- 与radio结合 -->
         <!-- 加上v-model 省略了name属性  依然互斥 -->
@@ -1576,7 +1560,7 @@ const app = new Vue({
 
 * v-model与checkbox结合
 
-```
+```vue
 <div id="app">
         <label for="agree">
             <input type="checkbox" id="agree" v-model="isAgree"/>同意协议
@@ -1609,7 +1593,7 @@ const app = new Vue({
 
 * v-model与select结合
 
-```
+```vue
   <div id="app">
         <!-- 选择一个 -->
         <select name="abc" v-model="fruit">
@@ -1650,7 +1634,7 @@ const app = new Vue({
 
 * 动态显示数据 也就是v-bind
 
-```
+```vue
  <div id="app">
        
         <h2>您的爱好是: {{hobbies}}</h2>
@@ -1671,7 +1655,6 @@ const app = new Vue({
                 originHobbies:["篮球","足球","乒乓球","羽毛球","台球","高尔夫球"],
             },
         })
-
     </script>
 ```
 
@@ -1681,7 +1664,7 @@ const app = new Vue({
 * number
 * trim
 
-```
+```vue
 <div id="app">
         <!-- 修饰符 -->
         <!-- 1.lazy -->
@@ -1725,7 +1708,7 @@ const app = new Vue({
   * 注册组件               Vue.component()
   * 使用组件
 
-```
+```vue
 <div id="app">
         <!-- 3. 使用组件 -->
         <mycpn></mycpn>
@@ -1752,8 +1735,6 @@ const app = new Vue({
         //2.注册组件
         Vue.component('mycpn',cpnC);
 
-
-
         const app = new Vue({
             el:"#app",
             data:{
@@ -1766,7 +1747,7 @@ const app = new Vue({
 
 ### 全局组件和局部组件
 
-```
+```vue
   components:{
                 cpn:cpnC,
             },
@@ -1774,7 +1755,7 @@ const app = new Vue({
 
 
 
-```
+```vue
 <div id="app">
        <!-- <my-cpn></my-cpn>
        <my-cpn></my-cpn>
@@ -1816,7 +1797,7 @@ const app = new Vue({
 
 ### 父组件和子组件
 
-```
+```vue
  <div id="app">
         <cpn2></cpn2>
 
@@ -1872,7 +1853,7 @@ const app = new Vue({
 * 省略Vue.extend
 * 使用对象替换
 
-```
+```vue
  <div id="app">
         <cpn1></cpn1>
         <cpn2></cpn2>
@@ -1918,7 +1899,7 @@ const app = new Vue({
 * template
 * 通过id绑定
 
-```
+```vue
 <div id="app">
         <cpn1></cpn1>
         <cpn1></cpn1>
@@ -1967,7 +1948,7 @@ const app = new Vue({
 * 所以需要一个`自己的data`属性
 * 这个data必须是`函数类型`
 
-```
+```vue
 <div id="app">
         <cpn1></cpn1>
         <cpn1></cpn1>
@@ -2007,7 +1988,7 @@ const app = new Vue({
 
 * 为什么是函数
 
-```
+```vue
  <div id="app">
         <!-- 每个组件实例都是独立的 因为data是函数 返回的是一个新对象-->
        <cpn></cpn>
@@ -2080,7 +2061,7 @@ const app = new Vue({
 
 * props传递 及定义写法
 
-```
+```vue
 <!-- 注意使用 v-bind -->
     <div id="app">
        <cpn :cmovies="movies" :cmessages="messages"></cpn>
@@ -2165,7 +2146,7 @@ const app = new Vue({
 * props中驼峰用法
 * 使用`-`拼接
 
-```
+```vue
 <!-- v-bind 不支持驼峰 -->
     <div id="app">
         <!-- <cpn :cinfo="info"></cpn> -->
@@ -2224,7 +2205,7 @@ const app = new Vue({
 *  通过this.$emit('itemclick',item);传递事件和参数
 * 父组件接收事件进行处理
 
-```
+```vue
  <div id="app">
         <!-- 监听事件 省略括号默认传递item 而不是event 因为itemclick不是浏览器生成的-->
         <cpn @itemclick="cpnClick"></cpn>
@@ -2284,7 +2265,7 @@ const app = new Vue({
 
 * 案例
 
-```
+```vue
 <div id="app">
         <cpn 
             :number1="num1" 
@@ -2365,7 +2346,7 @@ const app = new Vue({
 
 * 使用 watch实现
 
-```
+```vue
   <div id="app">
         <cpn 
             :number1="num1" 
@@ -2440,7 +2421,7 @@ const app = new Vue({
 
 * $children和$refs   推荐$refs
 
-```
+```vue
 <div id="app">
         <cpn ref="aaa"></cpn>
         <cpn></cpn>
@@ -2497,7 +2478,7 @@ const app = new Vue({
 
 * $parent    不建议使用   和 $root   基本不用
 
-```
+```vue
  <div id="app">
         <cpn></cpn>
     </div>
@@ -2561,7 +2542,7 @@ const app = new Vue({
 * 抽取共性保留不同做`<slot></slot>`
 * 插值 单个 多个 及 默认值
 
-```
+```vue
 <div id="app">
        <cpn>
            <!-- 插值 -->
@@ -2600,8 +2581,6 @@ const app = new Vue({
 
     <script>
 
-        
-
         const app = new Vue({
             el:"#app",
             data:{
@@ -2610,28 +2589,36 @@ const app = new Vue({
             components:{
                 cpn:{
                     template:"#cpn",
-
                 }
             }
         })
-
     </script>
 ```
 
 ### 具名插槽使用
 
-* slot="center"
+* `<template v-slot:center></template>`
+* v-slot:  缩写 #
+* `<template #:center></template>`
 
-```
+```vue
 <div id="app">
         <cpn>
-           <!-- 根据名字插   无名字的都替换-->
+           <!-- 根据名字插   无名字的都被视为是default-->
            <span>标题</span>
-           <span slot="center">标题</span>
+            <!--或者-->
+             <template v-slot:default>
+    			<span>标题</span>
+ 			</template>
+            <template v-slot:center>
+				<span>标题</span>
+            </template>
         </cpn>
 
         <cpn>
-            <button slot="left">返回</button>
+             <template v-slot:left>
+				 <button>返回</button>
+            </template>
         </cpn>
     </div>
 
@@ -2668,9 +2655,27 @@ const app = new Vue({
 
 ### 作用域插槽
 
+* user属于父级的变量 访问不到
+
+```vue
+<span>
+  <slot>{{ user.lastName }}</slot>
+</span>
+```
+
+* 使用插槽
+
+```vue
+<span>
+  <slot v-bind:user="user">
+    {{ user.lastName }}
+  </slot>
+</span>
+```
+
 #### 编译作用域
 
-```
+```vue
    <div id="app">
         <!-- isShow拿的Vue的isShow 因为app属于Vue的模板 -->
       <cpn v-show="isShow"></cpn>
@@ -2709,64 +2714,6 @@ const app = new Vue({
     </script>
 ```
 
-* 父组件替代插槽的标签,但是内容有子组件来提供
-
-```
- <div id="app">
-       <cpn></cpn>
-
-       <!-- 换形式展示 -->
-       <cpn>
-        <!-- 获取子组件数据   固定格式template 和 slot-scope-->
-            <template slot-scope="slot">
-                <!-- <span v-for="item in slot.data">{{item}} - </!-->
-                    <span>{{slot.data.join(' - ')}}</span>
-            </template>
-       </cpn>
-
-       <cpn>
-        <!-- 获取子组件数据 -->
-            <template slot-scope="slot">
-                <!-- <span v-for="item in slot.data">{{item}} * </span> -->
-                <span>{{slot.data.join(' * ')}}</span>
-            </template>
-       </cpn>
-    </div>
-
-    <template id="cpn">
-        <div>
-            <!-- 传递data -->
-          <slot :data="pLanguages">
-            <ul>
-                <li v-for="item in pLanguages">{{item}}</li>
-            </ul>
-          </slot>
-        </div>
-    </template>
-
-    <script src="../js/vue.js"></script>
-
-    <script>
-        const app = new Vue({
-            el:"#app",
-            data:{
-                messages:"你好",
-            },
-            components:{
-                cpn:{
-                    template:"#cpn",
-                    data(){
-                        return{
-                            pLanguages:['JavaScript','C++','Java','C#','Python','Go','Swift'],
-                        }
-                    }
-                }
-            }
-        })
-
-    </script>
-```
-
 ## 模块化开发
 
 * 为社么要模块化
@@ -2786,7 +2733,7 @@ const app = new Vue({
 
   * 导出
 
-    ```
+    ```js
     module.exports = {
         flag,
         sum,
@@ -2795,7 +2742,7 @@ const app = new Vue({
 
   * 导入
 
-    ```
+    ```js
     let {flag,sum} = require("./aaa.js");
     ```
 
@@ -2804,7 +2751,7 @@ const app = new Vue({
 * ES6
 * export和import
 
-```
+```js
 export {
     flag,
 }
@@ -2848,7 +2795,7 @@ aaa.flag
 
 ## Webpack
 
-* 是一个javascritp应用的静态`模块打包`工具
+* 是一个javascript应用的静态`模块打包`工具
 * 底层支撑
   * 转化AMD,CMD,CommonJS,ES6
 
@@ -2864,11 +2811,11 @@ aaa.flag
 * 安装Node.js
 * 安装webpack3.6.0  vue cli2
 
-```
+```js
 npm install webpack@3.6.0 -g
 ```
 
-```
+```js
 npm install webpack webpack-cli -g --save-dev
 ```
 
@@ -2880,7 +2827,7 @@ npm install webpack webpack-cli -g --save-dev
 
 * main.js
 
-* ```
+* ```js
   // 依赖位置
   const {add,mul} = require('../js/mathUtil.js');
   
@@ -2890,7 +2837,7 @@ npm install webpack webpack-cli -g --save-dev
 
 * mathUtil.js
 
-* ```
+* ```js
   function add(num1,num2){
       return num1 + num2;
   }
@@ -2909,11 +2856,11 @@ npm install webpack webpack-cli -g --save-dev
 
 * main.js入口
 
-```
+```js
 webpack .\src\main.js /dist/bundle.js
 ```
 
-```
+```js
 webpack .\src\main.js -o /dist/bundle.js --mode development
 ```
 
@@ -2921,7 +2868,7 @@ webpack .\src\main.js -o /dist/bundle.js --mode development
 * npm init
 * 配置文件 webpack.config.js
 
-```
+```js
 const path = require('path');
 
 module.exports = {
@@ -2936,7 +2883,7 @@ module.exports = {
 * webpack运行
 * 配置 package.json
 
-```
+```json
 {
   "name": "meetwebpack",
   "version": "1.0.0",
@@ -2956,13 +2903,13 @@ module.exports = {
 
 * 本地webpack
 
-* ```
+* ```js
   npm install webpack --save-dev
   ```
 
 * 生成 package.json
 
-* ```
+* ```json
   {
     "name": "meetwebpack",
     "version": "1.0.0",
@@ -2986,7 +2933,7 @@ module.exports = {
 
 * main.js
 
-* ```
+* ```js
   // 依赖位置
   const {add,mul} = require('../js/mathUtil.js');
   
@@ -3004,7 +2951,7 @@ npm install --save-dev css-loader
 
 * 配置 webpack.config.js
 
-```
+```js
 const path = require('path');
 
 module.exports = {
@@ -3033,7 +2980,7 @@ npm install --save-dev style-loader
 * 配置webpack.config.js
 *  use : ['style-loader','css-loader' ] 从右向左加载
 
-```
+```js
 const path = require('path');
 
 module.exports = {
@@ -3057,7 +3004,7 @@ module.exports = {
 
 * main.js
 
-* ```
+* ```js
   // 依赖位置
   const {add,mul} = require('../js/mathUtil.js');
   
@@ -3088,7 +3035,7 @@ module.exports = {
 
 * 配置 webpack.config.js
 
-* ```
+* ```js
   const path = require('path');
   
   module.exports = {
@@ -3143,7 +3090,7 @@ module.exports = {
 
 * 配置
 
-* ```
+* ```js
    {
           test: /\.(png|jpg|gif|jpeg)$/i,
           use: [
@@ -3177,7 +3124,7 @@ module.exports = {
 
     * 配置  publicPath:'dist/',
 
-    * ```
+    * ```js
       const path = require('path');
       
       module.exports = {
@@ -3244,7 +3191,7 @@ module.exports = {
 
 *  name:'img/[name].[hash:8].[ext]'
 
-* ```
+* ```js
   const path = require('path');
   
   module.exports = {
@@ -3305,7 +3252,7 @@ module.exports = {
   }
   ```
 
-#### ES6语法转ES5 babel
+#### ES6语法转ES5babel
 
 * 安装
 
@@ -3323,7 +3270,7 @@ npm install --save-dev babel-loader babel-core babel-preset-es2015
 
 * 配置 webpack.config.js
 
-* ```
+* ```js
    {
         test: /\.m?js$/,
         exclude: /(node_modules|bower_components)/,
@@ -3348,7 +3295,7 @@ npm install --save-dev babel-loader babel-core babel-preset-es2015
 
 * main.js
 
-* ```
+* ```js
   // 依赖位置
   const {add,mul} = require('../js/mathUtil.js');
   
@@ -3380,7 +3327,7 @@ npm install --save-dev babel-loader babel-core babel-preset-es2015
 
 * index.html
 
-* ```
+* ```vue
   <!DOCTYPE html>
   <html lang="en">
   <head>
@@ -3410,7 +3357,7 @@ npm install --save-dev babel-loader babel-core babel-preset-es2015
 
 * 配置 webpack.config.js
 
-* ```
+* ```js
    resolve:{
         alias:{
           // 指定匹配的文件
@@ -3427,7 +3374,7 @@ npm install --save-dev babel-loader babel-core babel-preset-es2015
 
 * 即
 
-* ```
+* ```vue
    template:`
           <div>
               <h2>{{message}}</h2>
@@ -3448,7 +3395,7 @@ npm install --save-dev babel-loader babel-core babel-preset-es2015
 
 * 分离出App.vue
 
-```
+```vue
 <template>
     <div>
        <h2 class="title">{{message}}</h2>
@@ -3484,7 +3431,7 @@ npm install --save-dev babel-loader babel-core babel-preset-es2015
 
 * main.js
 
-```
+```vue
 // 依赖位置
 const {add,mul} = require('../js/mathUtil.js');
 
@@ -3528,7 +3475,7 @@ const app = new Vue({
 
 * 配置 webpack.config.js
 
-```
+```js
 {
               test:/\.vue$/,
               use:["vue-loader"]
@@ -3544,7 +3491,7 @@ const app = new Vue({
 
 * 或者配置 webpack.config.js
 
-* ```
+* ```js
    plugins: [
         // make sure to include the plugin for the magic
         new VueLoaderPlugin()
@@ -3581,7 +3528,7 @@ new HtmlWebpackPlugin()
 
 * 修改src下对的index.html作为模板
 
-* ```
+* ```vue
   <!DOCTYPE html>
   <html lang="en">
   <head>
@@ -3664,7 +3611,7 @@ npm install --save-dev webpack-dev-server
 
 * build/base.config.js
 
-* ```
+* ```js
   const path = require('path');
   const VueLoaderPlugin = require('vue-loader/lib/plugin.js');
   const webpack = require('webpack');
@@ -3758,7 +3705,7 @@ npm install --save-dev webpack-dev-server
 
 * prod.config.js
 
-* ```
+* ```js
   const UglifyjsWebpackPlugin = require('uglifyjs-webpack-plugin');
   const WebpackMerge = require("Webpack-merge");
   const baseConfig = require("./base.config.js");
@@ -3772,7 +3719,7 @@ npm install --save-dev webpack-dev-server
 
 * dev.config.js
 
-* ```
+* ```js
   const WebpackMerge = require("Webpack-merge");
   const baseConfig = require("./base.config.js");
   
@@ -3922,7 +3869,7 @@ npm install -g @vue/cli
 
 * 使用v1 代使用量多
 
-* ```
+* ```vue
   // The Vue build version to load with the `import` command
   // (runtime-only or standalone) has been set in webpack.base.conf with an alias.
   import Vue from 'vue'
@@ -3945,7 +3892,7 @@ npm install -g @vue/cli
 
 * 参数h 是createElement
 
-* ```
+* ```vue
   render: function(createElement){
       return createElement('h2',{class:'box'},['hello world'])
   }
@@ -3972,7 +3919,7 @@ npm install -g @vue/cli
 
   
 
-```
+```vue
 import Vue from 'vue'
 import App from './App'
 
