--- a/_posts/2020-04-12-vue篇三.md
+++ b/_posts/2020-04-12-vue篇三.md
@@ -25,7 +25,7 @@
 
 ### Promise优雅的解决问题
 
-```
+```js
  <script>
     //参数是一个函数
     //函数本身有两个参数,参数本省也是函数
@@ -106,7 +106,7 @@
   </script>
 ```
 
-```
+```js
 new Promise((resolve,reject){
 	setTimeout(()=>{
 	//这里data不存在 模拟
@@ -142,7 +142,7 @@ new Promise((resolve,reject){
 
 ### 另一种处理形式
 
-```
+```js
 new Promise((resolve,reject){
 	setTimeout(()=>{
 	//这里data不存在 模拟
@@ -167,7 +167,7 @@ new Promise((resolve,reject){
 
 ### 链式操作
 
-```
+```js
 <script>
     //wrapped init 包裹
     //网络请求: aaa -> 自己处理(10行)
@@ -200,7 +200,7 @@ new Promise((resolve,reject){
 
 简写
 
-```
+```js
 	new Promise((resolve,reject)=>{
       setTimeout(()=>{
         resolve('aaa');
@@ -225,7 +225,7 @@ new Promise((resolve,reject){
 
 在简化   使用内部自己封装
 
-```
+```js
  new Promise((resolve,reject)=>{
       setTimeout(()=>{
         resolve('aaa');
@@ -250,7 +250,7 @@ new Promise((resolve,reject){
 
 失败处理
 
-```
+```js
 //失败处理
 
     new Promise((resolve,reject)=>{
@@ -288,7 +288,7 @@ new Promise((resolve,reject){
 
 * 参数为个迭代对象
 
-```
+```js
 new Promise([
     new Promise((resovle,reject) => {
         $ajax({
@@ -314,7 +314,7 @@ new Promise([
 
 模拟
 
-```
+```js
  Promise.all([
     new Promise((resovle,reject) => {
         setTimeout(()=>{
@@ -355,7 +355,7 @@ npm install vuex --save
 
 * store/index.js
 
-* ```
+* ```js
   import Vue from 'vue';
   import Vuex from 'vuex';
   
@@ -397,7 +397,7 @@ npm install vuex --save
 
 * main.js
 
-* ```
+* ```js
   import Vue from 'vue'
   import App from './App.vue'
   import store from './store/index.js';//导入
@@ -415,7 +415,7 @@ npm install vuex --save
 
 * HelloVuex.vue
 
-* ```
+* ```vue
   <template>
     <div>
       <h2>{{$store.state.counter}}</h2>
@@ -435,7 +435,7 @@ npm install vuex --save
 
 * App.vue
 
-* ```
+* ```vue
   <template>
     <div id="app">
       <h1>--------App内容--------</h1>
@@ -515,7 +515,7 @@ npm install vuex --save
 
 * 获取的时候第state进行一些处理的操作  比如 对state的数据平方
 
-* ```
+* ```js
   state:{
     counter:1000,
     students:[
@@ -580,7 +580,7 @@ npm install vuex --save
   * 一个回调函数(handler), 第一个参数就是state
 * 
 
-```
+```js
  mutations:{
     //方法  默认参数state
     increment(){//increment事件类型
@@ -624,7 +624,7 @@ npm install vuex --save
 
 #### 提交分格二
 
-```
+```js
 addCount(count){
         //传递参数   负载(Payload) 
         // this.$store.commit("incrementCount",count);
@@ -648,7 +648,7 @@ addCount(count){
     },
 ```
 
-```
+```js
 //接收时拿到的是  {type: "incrementCount", count: 5}
 ```
 
@@ -658,7 +658,7 @@ addCount(count){
 
 * 当给state中的对象添新属性时,使用下的方式
 
-  * ```
+  * ```js
     使用Vue.set(obj,'newProp',123);
     ```
 
@@ -666,7 +666,7 @@ addCount(count){
     用新对象旧对象重新赋值
     ```
 
-  * ```
+  * ```js
      updataInfo(){
           this.state.info.name = "ccc";
           // 新增
@@ -686,7 +686,7 @@ addCount(count){
 
   * 不能使用
 
-  * ```
+  * ```js
     state.info['xxx'] = "sss";
     xxx 是新增的 原来没有 所以没有响应式
     ```
@@ -695,7 +695,7 @@ addCount(count){
 
 * mutations-types.js
 
-* ```
+* ```js
   import {
     INCREMENT
   }from './store/mutations-types.js';
@@ -728,7 +728,7 @@ addCount(count){
 
 * actions 两个参数 context 和 payload 
 
-```
+```js
 updataInfo(){
       
 
@@ -801,7 +801,7 @@ updataInfo(){
 
 * 抽离
 
-* ```
+* ```js
     modules:{
       a: {
         state:{},
@@ -818,7 +818,7 @@ updataInfo(){
     }
   ```
 
-  ```
+  ```vue
   //抽离出来
   const moduleB = {
     state:{
@@ -872,7 +872,7 @@ updataInfo(){
     }
   ```
 
-  ```
+  ```vue
    <h2>{{$store.state.b.name}}</h2>
   ```
 
