--- a/_posts/2020-04-12-vue篇二.md
+++ b/_posts/2020-04-12-vue篇二.md
@@ -320,7 +320,7 @@ Vue.config.productionTip = false
 
   * index.js 配置路由相关
 
-  * ```
+  * ```js
     import VueRouter from "vue-router";
     import Vue from 'vue';
     
@@ -352,7 +352,7 @@ Vue.config.productionTip = false
 
   * main.js
 
-  * ```
+  * ```js
     import Vue from 'vue'
     import App from './App.vue'
     
@@ -369,7 +369,7 @@ Vue.config.productionTip = false
 
   * App.vue
 
-  * ```
+  * ```vue
     <template>
       <div id="app">
       //连接
@@ -395,7 +395,7 @@ Vue.config.productionTip = false
 
   * Home.vue
 
-  * ```
+  * ```vue
     <template>
     	<div>
     		<h2>我是首页</h2>
@@ -416,7 +416,7 @@ Vue.config.productionTip = false
 
   * About.vue
 
-  * ```
+  * ```vue
     <template>
         <div>
             <h2>我是关于</h2>
@@ -437,7 +437,7 @@ Vue.config.productionTip = false
 
 #### 路由默认路径及HTML5 history模式
 
-* ```
+* ```js
   	{
     		path:'',
     		//重定向
@@ -447,7 +447,7 @@ Vue.config.productionTip = false
 
 * HTML5的histroy模式
 
-* ```
+* ```js
   const router = new VueRouter({
   	routes,
   	mode:'history',
@@ -461,7 +461,7 @@ Vue.config.productionTip = false
 
 * tag 渲染
 
-* ```
+* ```js
   <router-link to="/home" tag="button">首页</router-link>
   <router-link to="/about" tag="button">关于</router-link>
   ```
@@ -470,20 +470,20 @@ Vue.config.productionTip = false
 
 * 怎么改成replaceState
 
-* ```
+* ```js
   <router-link to="/home" tag="button" replace>首页</router-link>
   <router-link to="/about" tag="button" replace>关于</router-link>
   ```
 
 * 当前选择的路由有个classs
 
-* ```
+* ```css
   router-link-active
   ```
 
 * 添加样式 改变按钮颜色
 
-* ```
+* ```css
    .router-link-active{
       color:#00f;
     }
@@ -491,14 +491,14 @@ Vue.config.productionTip = false
 
 * 修改自己的class   不常用
 
-* ```
+* ```js
   <router-link to="/home" tag="button" replace active-class="active">首页</router-link>
       <router-link to="/about" tag="button" replace active-class="active">关于</router-link>
   ```
 
 * 统一修改
 
-* ```
+* ```js
   const router = new VueRouter({
   	routes,
   	mode:'history',
@@ -506,11 +506,9 @@ Vue.config.productionTip = false
   });
   ```
 
-
-
 #### 通过代码实现跳转
 
-```
+```js
 
 export default {
   name: 'App',
@@ -531,7 +529,7 @@ export default {
 
 * 解决重复点击报错问题  抛异常
 
-```
+```js
 export default {
   name: 'App',
   methods:{
@@ -553,7 +551,7 @@ export default {
 
 * /user/id
 
-* ```
+* ```js
   配置/user
   
   	{
@@ -590,7 +588,7 @@ export default {
 
 * 懒加载 路由对应的文件分块 用谁加载谁
 
-* ```
+* ```js
   //旧写法
   const Home = resolve => { require.ensure(["./components/Home.vue"],       ()=> {resolve(require("../components/Home.vue"))})};
   
@@ -616,7 +614,7 @@ export default {
 
 * 在组件内部使用`<router-view>`标签
 
-* ```
+* ```vue
   <template>
     <div>
      <ul>
@@ -661,7 +659,7 @@ export default {
   </style>
   ```
 
-  ```
+  ```js
   import VueRouter from "vue-router";
   import Vue from 'vue';
   
@@ -716,7 +714,7 @@ export default {
   export default router;
   ```
 
-  ```
+  ```vue
   <template>
   	<div>
   		<h2>我是首页</h2>
@@ -740,7 +738,7 @@ export default {
 
   * 重定向
 
-  * ```
+  * ```js
     import VueRouter from "vue-router";
     import Vue from 'vue';
     
@@ -804,7 +802,7 @@ export default {
 
     * params
 
-    * ```
+    * ```js
       	//路由
         	{
         		path:'/user/:userId',
@@ -820,7 +818,7 @@ export default {
 
     * query
 
-    * ```
+    * ```js
       	//路由
         	{
         		path:'/user',
@@ -841,14 +839,14 @@ export default {
 
     * 按钮形式 
 
-    * ```
+    * ```js
       <button @click="userClick">用户</button>
       <button @click="profileClick">档案</button>
       ```
 
     * 
 
-    ```
+    ```js
     userClick() {
           // 通过代码方式跳转
           this.$router.replace("/user/"+this.userId).catch(err => {
@@ -878,7 +876,7 @@ export default {
 
 * 所有的组件都继承Vue类的原型
 
-* ```
+* ```js
   //在Vue的原上加上一个方法  , 所有组件都可以调用
   
   Vue.prototype.test = function(){
@@ -903,7 +901,7 @@ export default {
 
 * 使用全局导航守卫
 
-* ```
+* ```js
   {
   		path:'/user/:userId',
   		component:User,
@@ -913,7 +911,7 @@ export default {
   	},
   ```
 
-* ```
+* ```js
   //前置钩子
   router.beforeEach((to,from,next)=>{
   
@@ -925,7 +923,7 @@ export default {
   })
   ```
 
-* ```
+* ```js
   import VueRouter from "vue-router";
   import Vue from 'vue';
   
@@ -1018,7 +1016,7 @@ export default {
 
 * 后置钩子(后置守卫)
 
-* ```
+* ```js
   //后置钩子 没有next
   router.afterEach((to,from)=>{
   	
@@ -1031,7 +1029,7 @@ export default {
 
 * 路由独享守卫
 
-* ```
+* ```js
   {
   		path:'/user/:userId',
   		component:User,
@@ -1048,7 +1046,7 @@ export default {
 
 * 组件内的守卫
 
-* ```
+* ```js
   	export default {
     		name:"Home",
     		beforeRouteEnter (to, from, next){
@@ -1071,7 +1069,7 @@ export default {
 
 * router-view也是一个组件 如果直接被包在keep-alive里面 所有路径匹配的视图组件都会被缓存
 
-* ```
+* ```vue
   <keep-alive>
   	<router-view></router-view>
   </keep-alive>
@@ -1087,7 +1085,7 @@ export default {
 
 * exclude属性
 
-* ```
+* ```vue
   //组件的name 
   //Profile,User中间不允许空格
   <keep-alive exclude="Profile,User">
