--- a/_posts/2020-04-12-vue篇四.md
+++ b/_posts/2020-04-12-vue篇四.md
@@ -13,7 +13,7 @@
 
 * 不要直接用axios第三方模块
 * 如果崩溃难维护
-* 所以徐亚封装
+* 所以需要封装
 
 ## 网络模块
 
@@ -52,12 +52,11 @@
     * 这个时候, 我们利用<script>标签的src帮助我们取服务器请求到数据,将数据当做一个javascript的函数来执行, 并且执行的过程中出传入我们需要的json
     * 所以,封装jsonp的核心就在于我们监听window上的jsonp进行回调时的名称
 
-    
 
-![](F:\xdh\Ubuntu学习内容\Vue\day10\jsonp的封装.jpg)
+![jsonp的封装](.\image\jsonp的封装.jpg)
 
-![jsonp的封装接](F:\xdh\Ubuntu学习内容\Vue\day10\jsonp的封装接.jpg)
 
+![jsonp的封装](.\image\jsonp的封装接.jpg)
 
 
 ## Axios
