--- a/_posts/2020-04-12-vue篇四.md
+++ b/_posts/2020-04-12-vue篇四.md
@@ -53,10 +53,10 @@
     * 所以,封装jsonp的核心就在于我们监听window上的jsonp进行回调时的名称
 
 
-![jsonp的封装](..\assets\image\1.jpg)
+![jsonp的封装](https://chenyaoze666.github.io/assets/image/1.jpg)
 
 
-![jsonp的封装](..\assets\image\2.jpg)
+![jsonp的封装](https://chenyaoze666.github.io/assets/image/2.jpg)
 
 
 ## Axios
