--- a/_posts/2020-04-12-vue篇四.md
+++ b/_posts/2020-04-12-vue篇四.md
@@ -99,15 +99,15 @@ import axios from 'axios';
 
 ### 使用
 
-```
+```js
 axios({//默认为get
-  url:'http://123.207.32.32:8000/home/multidata'
+  url:'http://xxx/home/multidata'
 }).then(res =>{
   console.log(res)
 })
 
 axios({//默认为get
-  url:'http://123.207.32.32:8000/home/multidata',
+  url:'http://xxx/home/multidata',
   method:"get",
 }).then(res =>{
   console.log(res)
@@ -118,7 +118,7 @@ axios({//默认为get
 
 // 传参
 axios({
-  url:"http://123.207.32.32:8000/home/data",
+  url:"http://xxx/home/data",
   params:{
     type: 'pop',
     page: 1,
@@ -131,9 +131,9 @@ axios({
 
 //axios并发请求
 axios.all([axios({
-  url:"http://123.207.32.32:8000/home/multidata"
+  url:"http://xxx/home/multidata"
 }),axios({
-  url:"http://123.207.32.32:8000/home/data",
+  url:"http://xxx/home/data",
   params:{
     type: 'pop',
     page: 5,
@@ -145,9 +145,9 @@ axios.all([axios({
 
 //axios并发请求  展开获取
 axios.all([axios({
-  url:"http://123.207.32.32:8000/home/multidata"
+  url:"http://xxx/home/multidata"
 }),axios({
-  url:"http://123.207.32.32:8000/home/data",
+  url:"http://xxx/home/data",
   params:{
     type: 'pop',
     page: 5,
@@ -163,9 +163,9 @@ axios.all([axios({
 
 ### 全局配置
 
-* ```
+* ```js
   //全局配置
-  axios.defaults.baseURL = 'http://123.207.32.32:8000';
+  axios.defaults.baseURL = 'http://xxx';
   axios.defaults.timeout = 5000;
   //axios并发请求  展开获取
   axios.all([axios({
@@ -215,10 +215,10 @@ axios.all([axios({
 
 ### 实例和模块封装
 
-```
+```js
 // 创建实例  解决地址不一致问题
 const instance1 = axios.create({
-  baseURL = 'http://222.207.32.32:8000',
+  baseURL = 'http://xxx',
   timeout = 5000,
 })
 
@@ -249,7 +249,7 @@ instance1({
 
 * network/reuqest.js
 
-* ```
+* ```js
   import axios from 'axios';
   
   // 为了防止多个实例 需要导出 不是用default
@@ -257,7 +257,7 @@ instance1({
   
     //1.创建实例
     const instance = axios.create({
-      baseURL:'http://222.207.32.32:8000',
+      baseURL:'http://xxx',
       timeout:5000
     });
   
@@ -280,7 +280,7 @@ instance1({
 
 * 使用main.js
 
-* ```
+* ```js
   //5.封装request模块
   import {request} from "./network/request.js";
   
@@ -295,7 +295,7 @@ instance1({
 
 * 方式二
 
-* ```
+* ```js
   //方式二
   
   import axios from 'axios';
@@ -305,7 +305,7 @@ instance1({
   
     //1.创建实例
     const instance = axios.create({
-      baseURL:'http://152.136.185.210:8000/api/h8',
+      baseURL:'http://xxx/api/h8',
       timeout:5000
     });
   
@@ -326,7 +326,7 @@ instance1({
   }
   ```
 
-  ```
+  ```js
   
   import {request} from "./network/request.js";
   
@@ -346,7 +346,7 @@ instance1({
 
 * 使用Promise
 
-* ```
+* ```js
   //使用Promise
   import axios from 'axios';
   
@@ -356,7 +356,7 @@ instance1({
     return new Promise((resolve,reject) => {
       //1.创建实例
       const instance = axios.create({
-        baseURL:'http://152.136.185.210:8000/api/h8',
+        baseURL:'http://xxx/api/h8',
         timeout:5000
       });
   
@@ -389,7 +389,7 @@ instance1({
 
 * 终极
 
-```
+```js
 //终极
 import axios from 'axios';
 //换框架   导入对应框架
@@ -399,7 +399,7 @@ export function request(config){
 
     //1.创建实例   //换框架时换的东西
     const instance = axios.create({
-      baseURL:'http://152.136.185.210:8000/api/h8',
+      baseURL:'http://xxx/api/h8',
       timeout:5000
     });
 
@@ -432,7 +432,7 @@ request({
 * 换框架
 
 
-  ```
+  ```js
   //终极
   import axios from 'axios';
   //换框架   导入对应框架
@@ -442,7 +442,7 @@ request({
   
       //1.创建实例   //换框架时换的东西
       const instance = axios.create({
-        baseURL:'http://152.136.185.210:8000/api/h8',
+        baseURL:'http://xxx/api/h8',
         timeout:5000
       });
   
@@ -462,7 +462,7 @@ request({
 
 * 请求成功,请求失败,响应成功,响应失败 4个拦截
 
-* ```
+* ```js
   import axios from 'axios';
   //换框架   导入对应框架
   
@@ -471,7 +471,7 @@ request({
   
       //1.创建实例   //换框架时换的东西
       const instance = axios.create({
-        baseURL:'http://152.a136.185.210:8000/api/h8',
+        baseURL:'http://xxx:8000/api/h8',
         timeout:5000
       });
   
