--- a/_posts/2020-05-30-redis摘要.md
+++ b/_posts/2020-05-30-redis摘要.md
@@ -90,7 +90,7 @@ NoSQL
 * 3V
   * 海量
   * 多样
-  * 试试
+  * 实时
 * 3高
   * 高并发
   * 高可拓
@@ -123,7 +123,7 @@ NoSQL
 
 ## 对比
 
-![jsonp的封装](https://chenyaoze666.github.io/assets/image/数据库类型4则对比.PNG)
+![数据库类型4则对比](https://chenyaoze666.github.io/assets/image/数据库类型4则对比.PNG)
 
 # Redis入门
 
